# TuxCommand

./: Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml  push-pull.yml
implant/: Cargo.toml  README.md  build.rs
implant-c/: implant.c
implant/src/: debug.rs  main.rs  socket.rs
server/: Cargo.toml
server/src/: server.rs
src/: client.rs  server.rs  tui.rs
src/client/: client.rs
src/server/: lib.rs
victim/: Cargo.toml
victim/.cargo/: config.toml
victim/src/: main.rs
