cargo-features = ["panic-immediate-abort"]

[package]
name = "victim"
version = "0.1.0"
edition = "2021"

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "immediate-abort"
strip         = true
debug         = false
overflow-checks = false

[profile.release.build-override]
opt-level = 3            # build scripts themselves can be fast